--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "dependencies": {
     "request": "^2.87.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.17.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Fernando Fragoso",
   "license": "ISC"
